--- a/meleon/src/components/MyPage/styles/payment.style.scss
+++ b/meleon/src/components/MyPage/styles/payment.style.scss
@@ -16,6 +16,7 @@
       row-gap: 20px;
     }
     &:nth-child(2) {
+      margin-top: 90px;
     }
   }
   .box {
@@ -260,6 +261,135 @@
       }
     }
   }
+
+  .list-title {
+    font-size: 24px;
+    font-weight: bold;
+  }
+  .divider {
+    margin-top: 24px;
+    height: 2px;
+    width: 100%;
+    background-color: #191919;
+  }
+  .filter {
+    margin-top: 24px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    .apply {
+      width: 56px;
+      height: 40px;
+      background-color: $black;
+      color: #fff;
+      font-weight: 700;
+      font-size: 14px;
+      border-radius: 4px;
+    }
+  }
+  .list {
+    width: 100%;
+    margin-top: 17px;
+    background-color: $gray100;
+    border: 1px solid $gray200;
+    border-radius: 4px;
+
+    .header {
+      display: flex;
+      align-items: center;
+      padding: 0px 60px;
+      color: $gray600;
+      font-size: 16px;
+      font-weight: 700;
+      border-bottom: 1px solid $gray600;
+      height: 64px;
+
+      .col {
+        &:nth-child(1) {
+          flex: 1;
+        }
+        &:nth-child(2) {
+          flex: 5;
+        }
+        &:nth-child(3) {
+          flex: 1;
+          text-align: right;
+        }
+        &:nth-child(4) {
+          flex: 1;
+          text-align: right;
+        }
+      }
+    }
+    .body {
+      width: 100%;
+      .row {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        height: 84px;
+        padding: 0px 60px;
+        color: $black;
+        font-size: 14px;
+
+        &:not(:last-child) {
+          border-bottom: 1px solid $gray300;
+        }
+
+        .col {
+          width: 100%;
+          img {
+            width: 50px;
+            height: 50px;
+            margin-right: 5%;
+          }
+          &:nth-child(1) {
+            flex: 1;
+            flex-shrink: 0;
+          }
+          &:nth-child(2) {
+            display: flex;
+            align-items: center;
+            flex: 5;
+            flex-shrink: 1;
+
+            .text {
+              display: block;
+              overflow-x: hidden;
+              white-space: nowrap;
+              text-overflow: ellipsis;
+            }
+          }
+          &:nth-child(3) {
+            flex: 1;
+            flex-shrink: 0;
+
+            text-align: right;
+          }
+          &:nth-child(4) {
+            flex: 1;
+            flex-shrink: 0;
+
+            text-align: right;
+          }
+        }
+      }
+    }
+    .more {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 84px;
+      .text {
+        color: $gray600;
+        font-size: 14px;
+        font-weight: 700;
+        margin-right: 2px;
+      }
+    }
+  }
 }
 
 @media (max-width: 1420px) {
@@ -320,6 +450,60 @@
     }
     .row {
     }
+
+    .list-title {
+    }
+    .divider {
+    }
+    .filter {
+      display: none;
+
+      .apply {
+      }
+    }
+    .list {
+      .header {
+        padding: 0px 12px;
+
+        .col {
+          &:nth-child(1) {
+          }
+          &:nth-child(2) {
+            flex: 3;
+          }
+          &:nth-child(3) {
+          }
+          &:nth-child(4) {
+          }
+        }
+      }
+      .body {
+        .row {
+          padding: 0px 12px;
+
+          &:not(:last-child) {
+          }
+
+          .col {
+            img {
+            }
+            &:nth-child(1) {
+            }
+            &:nth-child(2) {
+              flex: 3;
+            }
+            &:nth-child(3) {
+            }
+            &:nth-child(4) {
+            }
+          }
+        }
+      }
+      .more {
+        .text {
+        }
+      }
+    }
   }
 }
 
@@ -362,6 +546,56 @@
     .divider {
     }
     .row {
+    }
+
+    .list-title {
+    }
+    .divider {
+    }
+    .filter {
+      .apply {
+      }
+    }
+    .list {
+      .header {
+        font-size: 12px;
+        .col {
+          &:nth-child(1) {
+          }
+          &:nth-child(2) {
+          }
+          &:nth-child(3) {
+          }
+          &:nth-child(4) {
+          }
+        }
+      }
+      .body {
+        .row {
+          font-size: 12px;
+          &:not(:last-child) {
+          }
+
+          .col {
+            img {
+              width: 32px;
+              height: 32px;
+            }
+            &:nth-child(1) {
+            }
+            &:nth-child(2) {
+            }
+            &:nth-child(3) {
+            }
+            &:nth-child(4) {
+            }
+          }
+        }
+      }
+      .more {
+        .text {
+        }
+      }
     }
   }
 }
