--- a/meleon/src/components/common/GNB/styles/gnb.style.scss
+++ b/meleon/src/components/common/GNB/styles/gnb.style.scss
@@ -21,6 +21,13 @@
   background-color: rgba(0, 0, 0, 0);
   z-index: 1;
   position: relative;
+  &-logo {
+    position: absolute;
+    left: 140px;
+    bottom: -12px;
+    width: 116px;
+    height: 116px;
+  }
   .gnb-bar {
     display: none;
     position: absolute;
