--- a/meleon/src/components/Music/styles/music.styles.css
+++ b/meleon/src/components/Music/styles/music.styles.css
@@ -108,6 +108,58 @@
   line-height: normal;
   letter-spacing: normal;
 }
+#root .music-root .main-section .new-section .play-container .musicplay-icon {
+  position: relative;
+  display: flex;
+  margin-left: 399px;
+  justify-content: space-between;
+  width: 106px;
+  height: 22px;
+}
+#root .music-root .main-section .new-section .play-container .musicplay-icon .download-popup {
+  position: absolute;
+  right: 36px;
+  top: 32px;
+  width: 123px;
+  height: 80px;
+  z-index: 1;
+  box-shadow: 0 3px 15px 0 rgba(0, 0, 0, 0.16);
+  background-color: white;
+}
+#root .music-root .main-section .new-section .play-container .musicplay-icon .download-popup .popup-box, #root .music-root .main-section .new-section .play-container .musicplay-icon .download-popup .popup-box:hover {
+  width: 123px;
+  height: 40px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#root .music-root .main-section .new-section .play-container .musicplay-icon .download-popup .popup-box span, #root .music-root .main-section .new-section .play-container .musicplay-icon .download-popup .popup-box:hover span {
+  width: 91px;
+  height: 17px;
+  color: #111111;
+  font-size: 14px;
+  font-family: Pretendard;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+}
+#root .music-root .main-section .new-section .play-container .musicplay-icon .download-popup .popup-box:hover {
+  background-color: rgba(92, 85, 250, 0.1);
+}
+#root .music-root .main-section .new-section .play-container .musicplay-icon .download-popup::before {
+  position: absolute;
+  top: -6px;
+  left: calc(50% - 3px);
+  display: block;
+  content: " ";
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #ffffff;
+}
 @media (max-width: 1024px) {
   #root .music-root .main-section {
     padding-left: 80px;
