--- a/meleon/src/components/common/GNB/styles/gnb.style.css
+++ b/meleon/src/components/common/GNB/styles/gnb.style.css
@@ -9,6 +9,13 @@
   z-index: 1;
   position: relative;
 }
+.gnb-logo {
+  position: absolute;
+  left: 140px;
+  bottom: -12px;
+  width: 116px;
+  height: 116px;
+}
 .gnb .gnb-bar {
   display: none;
   position: absolute;
