--- a/meleon/src/components/Illustrator/styles/illustrator.list.styles.css
+++ b/meleon/src/components/Illustrator/styles/illustrator.list.styles.css
@@ -58,6 +58,7 @@
   height: 100%;
   -o-object-fit: fill;
      object-fit: fill;
+  background-color: #767676;
 }
 #root .illustrator-list-root .player-container .description {
   position: relative;
