--- a/meleon/src/components/Illustrator/styles/illustrator.list.styles.scss
+++ b/meleon/src/components/Illustrator/styles/illustrator.list.styles.scss
@@ -54,6 +54,7 @@
         width: 100%;
         height: 100%;
         object-fit: fill;
+        background-color: $gray600;
       }
 
       .description {
