--- a/meleon/src/components/common/GNB/styles/gnb.style.scss
+++ b/meleon/src/components/common/GNB/styles/gnb.style.scss
@@ -55,9 +55,9 @@
       }
     }
   }
-  .logo {
+  &-logo {
     position: absolute;
-    top: 29px;
+
     left: 6.6vw;
   }
   .menu {
@@ -140,7 +140,7 @@
 
 @media (max-width: 1300px) {
   .gnb {
-    .logo {
+    &-logo {
       left: 80px;
     }
     .menu {
@@ -168,7 +168,7 @@
     .menu {
       display: none;
     }
-    .logo {
+    &-logo {
       left: 41.94vw;
     }
     .gnb-button {
@@ -183,7 +183,7 @@
 
 @media (max-width: 580px) {
   .gnb {
-    .logo {
+    &-logo {
       display: none;
     }
   }
