로그인, 음원 페이지 휴대폰에 맞게 css  적용

--- a/meleon/src/components/Music/styles/music.styles.css
+++ b/meleon/src/components/Music/styles/music.styles.css
@@ -17,6 +17,6 @@
 }
 @media (max-width: 720px) {
   #root .music-root .main-section .new-section .play-container {
-    width: 656px;
+    width: 85vw;
   }
 }/*# sourceMappingURL=music.styles.css.map */
