--- a/meleon/src/components/Music/styles/music.styles.scss
+++ b/meleon/src/components/Music/styles/music.styles.scss
@@ -44,7 +44,7 @@
       .main-section {
         .new-section {
           .play-container {
-            width: 656px;
+            width: 85vw;
           }
         }
       }
