--- a/meleon/src/components/Music/styles/musicplay.styles.css
+++ b/meleon/src/components/Music/styles/musicplay.styles.css
@@ -11,6 +11,8 @@
 }
 .musicplay-image {
   margin-left: 16px;
+  width: 50px;
+  height: 50px;
 }
 .musicplay-title {
   position: absolute;
@@ -196,6 +198,49 @@
 }
 @media (max-width: 720px) {
   .musicplay {
-    width: 656px;
+    width: 85vw;
+  }
+  .musicplay-button {
+    width: 20px;
+    height: 20px;
+  }
+  .musicplay-image {
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+  }
+  .musicplay-title {
+    width: 100px;
+    font-size: 10px;
+    top: 30px;
+    left: 90px;
+  }
+  .musicplay-artist {
+    width: 100px;
+    font-size: 10px;
+    left: 90px;
+  }
+  .musicplay-time {
+    position: absolute;
+    right: 2px;
+    top: 25px;
+  }
+  .musicplay-time .now-time {
+    font-size: 11px;
+  }
+  .musicplay-time .play-time {
+    font-size: 11px;
+  }
+  .musicplay-icon {
+    width: 68px;
+    height: 16px;
+    top: 45px;
+  }
+  .musicplay-icon img {
+    width: 16px;
+    height: 16px;
+  }
+  .musicplay-icon .download-popup {
+    right: 1px;
   }
 }/*# sourceMappingURL=musicplay.styles.css.map */
