--- a/meleon/src/components/Music/styles/musicplay.styles.scss
+++ b/meleon/src/components/Music/styles/musicplay.styles.scss
@@ -25,6 +25,13 @@
   }
   &-image {
     margin-left: 16px;
+    width: 50px;
+    height: 50px;
+    // background-image: image-set(
+    //     url(/) 1x,
+    //     url(/) 2x,
+    //     url(/) 3x,
+    //   );
   }
   &-title {
     position: absolute;
@@ -194,6 +201,49 @@
 
 @media (max-width: 720px) {
   .musicplay {
-    width: 656px;
+    width: 85vw;
+    &-button {
+      width: 20px;
+      height: 20px;
+    }
+    &-image {
+      width: 40px;
+      height: 40px;
+      margin-left: 10px;
+    }
+    &-title {
+      width: 100px;
+      font-size: 10px;
+      top: 30px;
+      left: 90px;
+    }
+    &-artist {
+      width: 100px;
+      font-size: 10px;
+      left: 90px;
+    }
+    &-time {
+      position: absolute;
+      right: 2px;
+      top: 25px;
+      .now-time {
+        font-size: 11px;
+      }
+      .play-time {
+        font-size: 11px;
+      }
+    }
+    &-icon {
+      width: 68px;
+      height: 16px;
+      top: 45px;
+      img {
+        width: 16px;
+        height: 16px;
+      }
+      .download-popup {
+        right: 1px;
+      }
+    }
   }
 }
