--- a/meleon/src/components/Splash/styles/splash.style.css
+++ b/meleon/src/components/Splash/styles/splash.style.css
@@ -76,15 +76,24 @@
 }
 
 @media (max-width: 1024px) {
-  .splash {
-    width: 1024px;
+  .splash-button {
+    left: 68.75vw;
   }
 }
 @media (max-width: 720px) {
   .splash {
-    width: 729px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .splash-box {
+    position: fixed;
   }
   .splash-button {
-    right: 270px;
+    position: inherit;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    margin-top: 646px;
   }
 }/*# sourceMappingURL=splash.style.css.map */
