--- a/meleon/src/components/common/GNB/styles/gnb.style.css
+++ b/meleon/src/components/common/GNB/styles/gnb.style.css
@@ -2,7 +2,7 @@
   display: none;
 }
 
-.gnb {
+.gnb, .gnb-main {
   width: 100%;
   height: 84px;
   background-color: rgba(0, 0, 0, 0);
@@ -16,28 +16,28 @@
   width: 116px;
   height: 116px;
 }
-.gnb .gnb-bar {
+.gnb .gnb-bar, .gnb-main .gnb-bar {
   display: none;
   position: absolute;
   top: 27px;
   left: 32px;
 }
-.gnb .side-menu {
+.gnb .side-menu, .gnb-main .side-menu {
   z-index: 2;
   position: fixed;
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.6);
 }
-.gnb .side-menu-bar {
+.gnb .side-menu-bar, .gnb-main .side-menu-bar {
   width: 352px;
   height: 100vh;
   background-color: white;
 }
-.gnb .side-menu-bar img {
+.gnb .side-menu-bar img, .gnb-main .side-menu-bar img {
   margin: 26px 288px 42px 32px;
 }
-.gnb .side-menu-bar button {
+.gnb .side-menu-bar button, .gnb-main .side-menu-bar button {
   color: #000;
   font-size: 16px;
   font-stretch: normal;
@@ -50,7 +50,7 @@
   position: absolute;
   left: 6.6vw;
 }
-.gnb .menu {
+.gnb .menu, .gnb-main .menu {
   width: 524px;
   height: 19px;
   display: flex;
@@ -59,7 +59,7 @@
   top: 33px;
   left: 17.5vw;
 }
-.gnb .menu .tab {
+.gnb .menu .tab, .gnb-main .menu .tab {
   color: #ebebeb;
   font-size: 16px;
   font-stretch: normal;
@@ -67,7 +67,7 @@
   line-height: normal;
   letter-spacing: normal;
 }
-.gnb .menu .tab.active {
+.gnb .menu .tab.active, .gnb-main .menu .tab.active {
   color: white;
   font-size: 16px;
   font-weight: bold;
@@ -77,7 +77,7 @@
   letter-spacing: normal;
   text-decoration: underline;
 }
-.gnb .gnb-user {
+.gnb .gnb-user, .gnb-main .gnb-user {
   display: flex;
   align-items: center;
   width: 400px;
@@ -86,7 +86,7 @@
   top: 27px;
   right: 6vw;
 }
-.gnb .gnb-user div {
+.gnb .gnb-user div, .gnb-main .gnb-user div {
   color: #fff;
   font-size: 16px;
   font-stretch: normal;
@@ -94,23 +94,23 @@
   line-height: normal;
   letter-spacing: normal;
 }
-.gnb .gnb-user .welcome {
+.gnb .gnb-user .welcome, .gnb-main .gnb-user .welcome {
   margin-right: 38px;
 }
-.gnb .gnb-user .coin-number {
+.gnb .gnb-user .coin-number, .gnb-main .gnb-user .coin-number {
   margin-right: 56px;
 }
-.gnb .gnb-user .cart {
+.gnb .gnb-user .cart, .gnb-main .gnb-user .cart {
   margin-right: 24px;
 }
-.gnb .gnb-button {
+.gnb .gnb-button, .gnb-main .gnb-button {
   width: 140px;
   height: 40px;
   position: absolute;
   top: 20px;
   right: 7.3vw;
 }
-.gnb .gnb-button-login, .gnb .gnb-button-sign {
+.gnb .gnb-button-login, .gnb-main .gnb-button-login, .gnb .gnb-button-sign, .gnb-main .gnb-button-sign {
   width: 60px;
   height: 40px;
   margin-right: 8px;
@@ -124,13 +124,13 @@
   letter-spacing: normal;
   border-radius: 4px;
 }
-.gnb .gnb-button-sign {
+.gnb .gnb-button-sign, .gnb-main .gnb-button-sign {
   width: 72px;
   margin-right: 0px;
   background-color: #5c55fa;
   color: white;
 }
-.gnb.black .menu .tab {
+.gnb.black .menu .tab, .black.gnb-main .menu .tab {
   color: #000000;
   font-size: 16px;
   font-stretch: normal;
@@ -138,7 +138,7 @@
   line-height: normal;
   letter-spacing: normal;
 }
-.gnb.black .menu .tab.active {
+.gnb.black .menu .tab.active, .black.gnb-main .menu .tab.active {
   color: #000000;
   font-size: 16px;
   font-weight: bold;
@@ -148,43 +148,55 @@
   letter-spacing: normal;
   text-decoration: underline;
 }
-.gnb.black .gnb-user {
+.gnb.black .gnb-user, .black.gnb-main .gnb-user {
   filter: invert(100%);
+}
+
+.gnb-main {
+  background-color: rgba(0, 0, 0, 0);
+}
+.gnb-main .gnb-logo {
+  width: 106px;
+  height: 32px;
+  top: 26px;
+}
+.gnb-main .menu {
+  display: none;
 }
 
 @media (max-width: 1300px) {
   .gnb-logo {
     left: 80px;
   }
-  .gnb .menu {
+  .gnb .menu, .gnb-main .menu {
     width: 428px;
     left: 236px;
   }
-  .gnb .gnb-user {
+  .gnb .gnb-user, .gnb-main .gnb-user {
     width: 88px;
     right: 80px;
   }
-  .gnb .gnb-user div {
+  .gnb .gnb-user div, .gnb-main .gnb-user div {
     display: none;
   }
-  .gnb .gnb-user .coin-image {
+  .gnb .gnb-user .coin-image, .gnb-main .gnb-user .coin-image {
     display: none;
   }
 }
 @media (max-width: 900px) {
-  .gnb .gnb-bar {
+  .gnb .gnb-bar, .gnb-main .gnb-bar {
     display: block;
   }
-  .gnb .menu {
+  .gnb .menu, .gnb-main .menu {
     display: none;
   }
   .gnb-logo {
     left: 41.94vw;
   }
-  .gnb .gnb-button {
+  .gnb .gnb-button, .gnb-main .gnb-button {
     right: 32px;
   }
-  .gnb .gnb-user {
+  .gnb .gnb-user, .gnb-main .gnb-user {
     right: 32px;
   }
 }
