--- a/meleon/src/components/common/GNB/styles/gnb.style.scss
+++ b/meleon/src/components/common/GNB/styles/gnb.style.scss
@@ -136,6 +136,19 @@
     }
   }
 }
+.gnb-main {
+  @extend .gnb;
+  //background: linear-gradient(94deg, #ff02a0, #a502fb);
+  background-color: rgba(0, 0, 0, 0);
+  .gnb-logo {
+    width: 106px;
+    height: 32px;
+    top: 26px;
+  }
+  .menu {
+    display: none;
+  }
+}
 
 @media (max-width: 1300px) {
   .gnb {
