--- a/meleon/src/styles/core.scss
+++ b/meleon/src/styles/core.scss
@@ -30,9 +30,13 @@ html {
 #root {
   min-height: 100vh;
   overflow-x: hidden;
+
+  .gnb {
+    position: absolute;
+    top: 0;
+  }
+
   .page-root {
-    position: relative;
-    top: -84px;
     width: 100%;
     min-height: 100vh;
     overflow-x: hidden;
@@ -90,6 +94,7 @@ html {
       display: flex;
       align-items: center;
       gap: 6px;
+      width: fit-content;
       .span {
         font-size: 24px;
         font-weight: 700;
@@ -206,6 +211,7 @@ html {
       align-items: center;
       gap: 6px;
       cursor: pointer;
+      width: fit-content;
 
       .span {
         font-size: 24px;
