--- a/meleon/src/components/Music/styles/musicplay.styles.scss
+++ b/meleon/src/components/Music/styles/musicplay.styles.scss
@@ -139,7 +139,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        span {
+        cursor: pointer;
+
+        span,
+        a {
           width: 91px;
           height: 17px;
           @include font-setting($black, normal, 14px);
