--- a/meleon/src/components/main/styles/main.style.scss
+++ b/meleon/src/components/main/styles/main.style.scss
@@ -11,8 +11,8 @@
   justify-content: center;
   background: linear-gradient(94deg, #ff02a0, #a502fb);
   &-body {
-    margin-top: 84px;
-    width: 660px;
+    padding-top: 84px;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -25,16 +25,15 @@
     }
     &-table {
       margin-top: 80px;
-      width: 660px;
+      width: fit-content;
       height: 480px;
-
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 30px 30px;
       .menu-tab {
         position: relative;
-        width: 200px;
-        height: 225px;
+        width: 20vw;
+        height: 30vh;
         background-color: $gray300;
         box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
         border-radius: 20px;
@@ -66,7 +65,7 @@
 @media (max-width: 720px) {
   .main {
     &-body {
-      margin-top: 100px;
+      padding-top: 100px;
       p {
         text-align: center;
         font-size: 14px;
