--- a/meleon/src/components/Splash/styles/splash.style.css
+++ b/meleon/src/components/Splash/styles/splash.style.css
@@ -9,7 +9,16 @@
   justify-content: center;
   align-items: center;
 }
+.splash video {
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+.splash .splash-video {
+  width: 100%;
+  height: 100%;
+}
 .splash-box {
+  position: relative;
   width: 380px;
   height: 149px;
   display: flex;
