--- a/meleon/src/components/Splash/styles/splash.style.scss
+++ b/meleon/src/components/Splash/styles/splash.style.scss
@@ -21,14 +21,24 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+
+  video {
+    object-fit: fill;
+  }
+
+  .splash-video {
+    width: 100%;
+    height: 100%;
+  }
+
   &-box {
+    position: relative;
     width: 380px;
     height: 149px;
-
     display: flex;
     flex-wrap: wrap;
-
     justify-content: center;
+
     div {
       height: 54.5px;
       @include font-setting(#fff, bold, 39px);
