--- a/meleon/src/components/main/styles/main.style.css
+++ b/meleon/src/components/main/styles/main.style.css
@@ -8,8 +8,8 @@
   background: linear-gradient(94deg, #ff02a0, #a502fb);
 }
 .main-body {
-  margin-top: 84px;
-  width: 660px;
+  padding-top: 84px;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -23,7 +23,9 @@
 }
 .main-body-table {
   margin-top: 80px;
-  width: 660px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   height: 480px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -31,8 +33,8 @@
 }
 .main-body-table .menu-tab {
   position: relative;
-  width: 200px;
-  height: 225px;
+  width: 20vw;
+  height: 30vh;
   background-color: #dbdbdb;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
@@ -56,7 +58,7 @@
 
 @media (max-width: 720px) {
   .main-body {
-    margin-top: 100px;
+    padding-top: 100px;
   }
   .main-body p {
     text-align: center;
