--- a/meleon/src/components/MyPage/styles/fix.userinfo.style.scss
+++ b/meleon/src/components/MyPage/styles/fix.userinfo.style.scss
@@ -61,6 +61,9 @@
   .user-form {
     margin-top: 64px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+
     .row {
       width: 100%;
       display: flex;
@@ -68,6 +71,16 @@
       &:not(:first-child) {
         margin-top: 24px;
       }
+    }
+    .store-button {
+      margin-top: 62px;
+      height: 40px;
+      width: 136px;
+      font-size: 18px;
+      color: $primary-blue;
+      align-self: flex-end;
+      border: 1px solid $primary-blue;
+      border-radius: 20px;
     }
   }
 }
