hotfix(dummy):더미이미지 변경

--- a/meleon/src/components/Splash/styles/splash.style.css
+++ b/meleon/src/components/Splash/styles/splash.style.css
@@ -4,7 +4,7 @@
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  background-color: #555599;
+  background-color: #fff;
   flex-direction: row;
   justify-content: center;
   align-items: center;
